examples/cpol/validate-restrict-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
  labels:
    kyverno-policy: "true"
  annotations:
    policies.kyverno.io/title: Restrict Image Registries
    policies.kyverno.io/category: Best Practices, EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.26"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Images from unknown, public registries can be of dubious quality and may not be scanned and secured, representing a high degree of risk. Requiring use of known, approved registries helps reduce threat exposure by ensuring image pulls only come from them. This policy validates that container images only originate from the registry `eu.foo.io` or `bar.io`. Use of this policy requires customization to define your allowable registries.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-registries
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Only images from my registry are allowed!"
        pattern:
          spec:
            =(ephemeralContainers):
              - image: "docker.io/paulovigne/* | ghcr.io/paulovigne/*"
            =(initContainers):
              - image: "docker.io/paulovigne/* | ghcr.io/paulovigne/*"
            containers:
              - image: "docker.io/paulovigne/* | ghcr.io/paulovigne/*"
